--- a/ndt_offline/CMakeLists.txt
+++ b/ndt_offline/CMakeLists.txt
@@ -44,4 +44,4 @@ include_directories(
 )
 
 add_executable(fuser3d_offline src/fuser3d_offline.cpp)
-target_link_libraries(fuser3d_offline ${LIBXML2_LIBRARIES} ${GLUT_LIBRARIES} ${JPEG_LIBRARIES} ${OPENGL_LIBRARIES} ${Boost_LIBRARIES} ${catkin_LIBRARIES})
+target_link_libraries(fuser3d_offline ${LIBXML2_LIBRARIES} ${GLUT_LIBRARIES} ${JPEG_LIBRARIES} ${OPENGL_LIBRARIES} ${Boost_LIBRARIES} ${catkin_LIBRARIES} velodyne_pointcloudXYZIR)
